--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<!-- nothing here -->
+ <!DOCTYPE html>
+ <html lang="en">
+
+ <head>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Recepten | Chorizo met ei</title>
+ </head>
+
+ <body>
+
+     <h1>Chorizo met ei</h1>
+
+     <ul>
+
+         <li> <a href="index.html">Chorizo met ei</a></li>
+         <li> <a href="pasta-carbonara.html">pasta carbonara</a></li>
+         <li> <a href="pasta-bolognese.html">pasta bolognese</a></li>
+
+     </ul>
+
+     <img src="images/Chorizo met ei.jpg">
+
+     <h2>ingredienten</h2>
+
+     <ul>
+
+         <li>chorizoworst250 g</li>
+         <li>rode paprika1</li>
+         <li> groene paprika1</li>
+         <li>gele paprika1</li>
+         <li>lente-uitjes3</li>
+         <li>tomatenblokjes (uit blik)400 g</li>
+         <li> peper</li>
+         <li>zout</li>
+         <li>eieren4</li>
+
+     </ul>
+
+     <h2>bereiding</h2>
+
+     <ol>
+
+         <li>1 Snij de chorizo in blokjes, de paprika's in reepjes en de lente-uitjes in ringen.</li>
+         <li>Meng de paprika met de tomatenblokjes, de lente-ui en de chorizo. Breng alles op smaak met flink wat peper
+             en eventueel een klein beetje zout.</li>
+         <li>Verdeel het mengsel over 4 individuele schaaltjes. Zet ze 3 à 4 minuten in de microgolfoven, op 600 Watt.
+         </li>
+         <li> Breek in elk schaaltje 1 ei, prik de dooier door en zet de schaaltjes opnieuw 1 à 2 minuten in de
+             microgolfoven, tot het eiwit gestold is.</li>
+
+     </ol>
+
+ </body>
+
+ </html>
