--- a/pasta-bolognese.html
+++ b/pasta-bolognese.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recept | pasta-carbonara</title>
+    <title>Recept | pasta-bolognese</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>pasta-carbonara</h1>
+    <h1>pasta-bolognese</h1>
 
     <ul>
 
